BLogpost: fixed ul li font size on mobile

--- a/web/public/src/css/sections/blogPost.scss
+++ b/web/public/src/css/sections/blogPost.scss
@@ -90,10 +90,7 @@
       display: block;
     }
 
-
-
-
-    p {
+    p, ul li {
       font-size: 18px;
       line-height: 1.58;
       letter-spacing: -.004em;
